src/parser_scan.c
/* Generated by re2c 1.1.1 on Fri Dec  7 11:06:28 2018 */
#line 1 "src/parser_scan.re"
/*******************************************************************************
 Copyright (c) 2016, Michael Wallner <mike@php.net>.
 All rights reserved.

 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are met:

     * Redistributions of source code must retain the above copyright notice,
       this list of conditions and the following disclaimer.
     * Redistributions in binary form must reproduce the above copyright
       notice, this list of conditions and the following disclaimer in the
       documentation and/or other materials provided with the distribution.

 THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
 DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE
 FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
 DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
 SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
 CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
*******************************************************************************/

#ifdef HAVE_CONFIG_H
# include "config.h"
#else
# include "php_config.h"
#endif

#include "parser.h"
#include "plist.h"
#include "debug.h"

#define YYMAXFILL 15

#ifndef YYMAXFILL
# define YYMAXFILL 256
#endif

size_t psi_parser_maxfill(void) {
	return YYMAXFILL;
}

#define NEWLINE() \
	eol = cur; \
	++I->lines

#define NEWTOKEN(t) do { \
	if (t == PSI_T_COMMENT || t == PSI_T_WHITESPACE) { \
		token = psi_token_init(t, "", 0, tok - eol + 1, I->lines, I->file); \
	} else { \
		token = psi_token_init(t, tok, cur - tok, tok - eol + 1, I->lines, I->file); \
	} \
	tokens = psi_plist_add(tokens, &token); \
	PSI_DEBUG_LOCK(P, \
			PSI_DEBUG_PRINT(P, "PSI: scanned < "); \
			PSI_DEBUG_DUMP(P, psi_token_dump, token); \
	); \
} while(0)

#define CHECKEOF() if (cur >= lim - YYMAXFILL) goto done

struct psi_plist *psi_parser_scan(struct psi_parser *P, struct psi_parser_input *I)
{
	struct psi_plist *tokens;
	struct psi_token *token;
	const char *tok, *cur, *lim, *mrk, *eol, *ctxmrk;
	unsigned parens;
	bool escaped;
	token_t char_width;

	PSI_DEBUG_PRINT(P, "PSI: scanning %s\n", I->file->val);

	tok = mrk = eol = cur = I->buffer;
	lim = I->buffer + I->length + YYMAXFILL;
	I->lines = 1;
	tokens = psi_plist_init((psi_plist_dtor) psi_token_free);

	start: ;
		char_width = 1;
		ctxmrk = NULL;
		tok = cur;

		(void) ctxmrk;

		
#line 92 "src/parser_scan.c"
		{
			unsigned char yych;
			unsigned int yyaccept = 0;
			if ((lim - cur) < 15) CHECKEOF();;
			yych = *cur;
			switch (yych) {
			case 0x00:
			case 0x01:
			case 0x02:
			case 0x03:
			case 0x04:
			case 0x05:
			case 0x06:
			case 0x07:
			case 0x08:
			case '\v':
			case 0x0E:
			case 0x0F:
			case 0x10:
			case 0x11:
			case 0x12:
			case 0x13:
			case 0x14:
			case 0x15:
			case 0x16:
			case 0x17:
			case 0x18:
			case 0x19:
			case 0x1A:
			case 0x1B:
			case 0x1C:
			case 0x1D:
			case 0x1E:
			case 0x1F:
			case '@':
			case '`':
			case 0x7F:	goto yy2;
			case '\t':
			case '\f':
			case ' ':	goto yy4;
			case '\n':
			case '\r':	goto yy7;
			case '!':	goto yy9;
			case '"':	goto yy11;
			case '#':	goto yy13;
			case '$':	goto yy15;
			case '%':	goto yy16;
			case '&':	goto yy18;
			case '\'':	goto yy20;
			case '(':	goto yy22;
			case ')':	goto yy24;
			case '*':	goto yy26;
			case '+':	goto yy28;
			case ',':	goto yy30;
			case '-':	goto yy32;
			case '.':	goto yy34;
			case '/':	goto yy36;
			case '0':	goto yy38;
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy40;
			case ':':	goto yy42;
			case ';':	goto yy44;
			case '<':	goto yy46;
			case '=':	goto yy48;
			case '>':	goto yy50;
			case '?':	goto yy52;
			case 'A':
			case 'a':	goto yy54;
			case 'B':	goto yy56;
			case 'C':	goto yy57;
			case 'D':	goto yy58;
			case 'E':	goto yy59;
			case 'F':	goto yy60;
			case 'I':	goto yy63;
			case 'L':	goto yy64;
			case 'M':
			case 'm':	goto yy65;
			case 'N':
			case 'n':	goto yy66;
			case 'O':
			case 'o':	goto yy67;
			case 'P':	goto yy68;
			case 'R':
			case 'r':	goto yy69;
			case 'S':	goto yy70;
			case 'T':	goto yy71;
			case 'U':	goto yy72;
			case 'W':
			case 'w':	goto yy73;
			case 'Z':
			case 'z':	goto yy74;
			case '[':	goto yy75;
			case '\\':	goto yy77;
			case ']':	goto yy79;
			case '^':	goto yy81;
			case '_':	goto yy83;
			case 'b':	goto yy84;
			case 'c':	goto yy85;
			case 'd':	goto yy86;
			case 'e':	goto yy87;
			case 'f':	goto yy88;
			case 'i':	goto yy89;
			case 'l':	goto yy90;
			case 'p':	goto yy91;
			case 's':	goto yy92;
			case 't':	goto yy93;
			case 'u':	goto yy94;
			case 'v':	goto yy95;
			case '{':	goto yy96;
			case '|':	goto yy98;
			case '}':	goto yy100;
			case '~':	goto yy102;
			default:	goto yy61;
			}
yy2:
			++cur;
yy3:
#line 257 "src/parser_scan.re"
			{ CHECKEOF(); NEWTOKEN(-2); goto error; }
#line 219 "src/parser_scan.c"
yy4:
			++cur;
			if (lim <= cur) CHECKEOF();;
			yych = *cur;
			switch (yych) {
			case '\t':
			case '\f':
			case ' ':	goto yy4;
			default:	goto yy6;
			}
yy6:
#line 256 "src/parser_scan.re"
			{ NEWTOKEN(PSI_T_WHITESPACE); goto start; }
#line 233 "src/parser_scan.c"
yy7:
			++cur;
#line 255 "src/parser_scan.re"
			{ NEWTOKEN(PSI_T_EOL); NEWLINE(); goto start; }
#line 238 "src/parser_scan.c"
yy9:
			yych = *++cur;
			switch (yych) {
			case '=':	goto yy104;
			default:	goto yy10;
			}
yy10:
#line 158 "src/parser_scan.re"
			{ NEWTOKEN(PSI_T_NOT); goto start; }
#line 248 "src/parser_scan.c"
yy11:
			++cur;
#line 131 "src/parser_scan.re"
			{ escaped = false; tok += 1; goto string; }
#line 253 "src/parser_scan.c"
yy13:
			yych = *++cur;
			switch (yych) {
			case '#':	goto yy106;
			default:	goto yy14;
			}
yy14:
#line 141 "src/parser_scan.re"
			{ NEWTOKEN(PSI_T_HASH); goto start; }
#line 263 "src/parser_scan.c"
yy15:
			yych = *++cur;
			switch (yych) {
			case 0x00:
			case 0x01:
			case 0x02:
			case 0x03:
			case 0x04:
			case 0x05:
			case 0x06:
			case 0x07:
			case 0x08:
			case '\t':
			case '\n':
			case '\v':
			case '\f':
			case '\r':
			case 0x0E:
			case 0x0F:
			case 0x10:
			case 0x11:
			case 0x12:
			case 0x13:
			case 0x14:
			case 0x15:
			case 0x16:
			case 0x17:
			case 0x18:
			case 0x19:
			case 0x1A:
			case 0x1B:
			case 0x1C:
			case 0x1D:
			case 0x1E:
			case 0x1F:
			case ' ':
			case '!':
			case '"':
			case '#':
			case '$':
			case '%':
			case '&':
			case '\'':
			case '(':
			case ')':
			case '*':
			case '+':
			case ',':
			case '-':
			case '.':
			case '/':
			case ':':
			case ';':
			case '<':
			case '=':
			case '>':
			case '?':
			case '@':
			case '[':
			case '\\':
			case ']':
			case '^':
			case '`':
			case '{':
			case '|':
			case '}':
			case '~':
			case 0x7F:	goto yy3;
			default:	goto yy108;
			}
yy16:
			++cur;
#line 159 "src/parser_scan.re"
			{ NEWTOKEN(PSI_T_MODULO); goto start; }
#line 338 "src/parser_scan.c"
yy18:
			yych = *++cur;
			switch (yych) {
			case '&':	goto yy111;
			default:	goto yy19;
			}
yy19:
#line 160 "src/parser_scan.re"
			{ NEWTOKEN(PSI_T_AMPERSAND); goto start; }
#line 348 "src/parser_scan.c"
yy20:
			++cur;
#line 130 "src/parser_scan.re"
			{ escaped = false; tok += 1; goto character; }
#line 353 "src/parser_scan.c"
yy22:
			++cur;
#line 142 "src/parser_scan.re"
			{ NEWTOKEN(PSI_T_LPAREN); goto start; }
#line 358 "src/parser_scan.c"
yy24:
			++cur;
#line 143 "src/parser_scan.re"
			{ NEWTOKEN(PSI_T_RPAREN); goto start; }
#line 363 "src/parser_scan.c"
yy26:
			++cur;
#line 156 "src/parser_scan.re"
			{ NEWTOKEN(PSI_T_ASTERISK); goto start; }
#line 368 "src/parser_scan.c"
yy28:
			++cur;
#line 161 "src/parser_scan.re"
			{ NEWTOKEN(PSI_T_PLUS); goto start; }
#line 373 "src/parser_scan.c"
yy30:
			++cur;
#line 145 "src/parser_scan.re"
			{ NEWTOKEN(PSI_T_COMMA); goto start; }
#line 378 "src/parser_scan.c"
yy32:
			++cur;
#line 162 "src/parser_scan.re"
			{ NEWTOKEN(PSI_T_MINUS); goto start; }
#line 383 "src/parser_scan.c"
yy34:
			yyaccept = 0;
			yych = *(mrk = ++cur);
			switch (yych) {
			case '.':	goto yy113;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy115;
			default:	goto yy35;
			}
yy35:
#line 173 "src/parser_scan.re"
			{ NEWTOKEN(PSI_T_PERIOD); goto start; }
#line 404 "src/parser_scan.c"
yy36:
			yych = *++cur;
			switch (yych) {
			case '*':	goto yy118;
			case '/':	goto yy120;
			default:	goto yy37;
			}
yy37:
#line 163 "src/parser_scan.re"
			{ NEWTOKEN(PSI_T_SLASH); goto start; }
#line 415 "src/parser_scan.c"
yy38:
			yyaccept = 1;
			yych = *(mrk = ++cur);
			switch (yych) {
			case '.':	goto yy122;
			case 'E':
			case 'e':	goto yy126;
			case 'X':
			case 'x':	goto yy131;
			default:	goto yy125;
			}
yy39:
#line 117 "src/parser_scan.re"
			{ NEWTOKEN(PSI_T_NUMBER); token->flags = PSI_NUMBER_INT; goto start; }
#line 430 "src/parser_scan.c"
yy40:
			yyaccept = 1;
			mrk = ++cur;
			if ((lim - cur) < 3) CHECKEOF();;
			yych = *cur;
			switch (yych) {
			case '.':	goto yy122;
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':	goto yy40;
			case 'E':
			case 'e':	goto yy126;
			case 'L':
			case 'l':	goto yy127;
			case 'U':
			case 'u':	goto yy129;
			default:	goto yy39;
			}
yy42:
			++cur;
#line 146 "src/parser_scan.re"
			{ NEWTOKEN(PSI_T_COLON); goto start; }
#line 460 "src/parser_scan.c"
yy44:
			++cur;
#line 144 "src/parser_scan.re"
			{ NEWTOKEN(PSI_T_EOS); goto start; }
#line 465 "src/parser_scan.c"
yy46:
			yyaccept = 2;
			yych = *(mrk = ++cur);
			switch (yych) {
			case '-':
			case '.':
			case '/':
			case '0':
			case '1':
			case '2':
			case '3':
			case '4':
			case '5':
			case '6':
			case '7':
			case '8':
			case '9':
			case 'A':
			case 'B':
			case 'C':
			case 'D':
			case 'E':
			case 'F':
			case 'G':
			case 'H':
			case 'I':
			case 'J':
			case 'K':
			case 'L':
			case 'M':
			case 'N':
			case 'O':
			case 'P':
			case 'Q':
			case 'R':
			case 'S':
			case 'T':
			case 'U':
			case 'V':
			case 'W':
			case 'X':
			case 'Y':
			case 'Z':
			case '_':
			case 'a':
			case 'b':
			case 'c':
			case 'd':
			case 'e':
			case 'f':
			case 'g':
			case 'h':
			case 'i':
			case 'j':
			case 'k':
			case 'l':
			case 'm':
			case 'n':
			case 'o':
			case 'p':
			case 'q':
			case 'r':
			case 's':
			case 't':
			case 'u':
			case 'v':
			case 'w':
			case 'x':
			case 'y':
			case 'z':	goto yy132;
			case '<':	goto yy134;
			case '=':	goto yy136;
			default:	goto yy47;
			}
yy47:
#line 171 "src/parser_scan.re"
			{ NEWTOKEN(PSI_T_LCHEVR); goto start; }
#line 543 "src/parser_scan.c"
yy48:
			yych = *++cur;
			switch (yych) {
			case '=':	goto yy138;
			default:	goto yy49;
			}
yy49:
#line 155 "src/parser_scan.re"
			{ NEWTOKEN(PSI_T_EQUALS); goto start; }
#line 553 "src/parser_scan.c"
yy50:
			yych = *++cur;
			switch (yych) {
			case '=':	goto yy140;
			case '>':	goto yy142;
			default:	goto yy51;
			}
yy51:
